# mattress

./: .buildinfo  CHANGELOG.md  README.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-docs.yml  pypi-publish.yml  pypi-test.yml
_modules/: index.html  mattress.html
_modules/mattress/: InitializedMatrix.html  TatamiNumericPointer.html  cpphelpers.html  initialize.html  interface.html  utils.html
_sources/api/: mattress.rst.txt
_static/: documentation_options.js
api/: mattress.html  modules.html
lib/: CMakeLists.txt
lib/src/: common.cpp  compressed_sparse.cpp  compressed_sparse_matrix.cpp  delayed_binary_isometric_operation.cpp  delayed_subset.cpp  delayed_unary_isometric_operation_with_args.cpp  dense.cpp  dense_matrix.cpp  fragmented_sparse_matrix.cpp  init.cpp
src/mattress/: InitializedMatrix.py  TatamiNumericPointer.py  __init__.py  _cpphelpers.py  cpphelpers.py  initialize.py  interface.py  utils.py
tests/: test_combine.py  test_compressed_sparse_matrix.py  test_delayed.py  test_delayed_binary_isometric_op.py  test_delayed_bind.py  test_delayed_combine.py  test_delayed_subset.py  test_delayed_unary_isometric_op_simple.py  test_delayed_unary_isometric_op_with_args.py  test_dense.py  test_dense_matrix.py  test_fragmented_sparse_matrix.py  test_miscellaneous.py  test_subset.py  test_transpose.py  test_unary_isometric_op_simple.py  test_unary_isometric_op_with_args.py
(+10 files in other folders)
